--- a/Process_Thoughts/ConcurrentMemoryPool/ConcurrentMemoryPool.vcxproj
+++ b/Process_Thoughts/ConcurrentMemoryPool/ConcurrentMemoryPool.vcxproj
@@ -135,6 +135,7 @@
     <ClInclude Include="ThreadCache.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BenchMark.cpp" />
     <ClCompile Include="CentralCache.cpp" />
     <ClCompile Include="PageCache.cpp" />
     <ClCompile Include="ThreadCache.cpp" />
