--- a/Process_Thoughts/ConcurrentMemoryPool/ConcurrentMemoryPool.vcxproj.filters
+++ b/Process_Thoughts/ConcurrentMemoryPool/ConcurrentMemoryPool.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClCompile Include="PageCache.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="BenchMark.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
