--- a/Final_Version/makefile
+++ b/Final_Version/makefile
@@ -1,7 +1,7 @@
 CC = gcc
 SRC_DIR = src
 INCLUDE_DIR = include/
-CFLAGS = -I ${INCLUDE_DIR}
+CFLAGS = -I ${INCLUDE_DIR} -lstdc++ -pthread
 
 CMP: BenchMark.cpp ${SRC_DIR}/*.cpp
 	${CC} -o $@ $^ ${CFLAGS}
